# tensorflow-cpp

./: .gitignore  ISSUES.md  LICENSE  README.md  jenkins-pipeline
eigen/: install.sh  package.xml  package.xml.in
eigen/test/: num_dimensions.cpp
examples/: CMakeLists.txt  package.xml
examples/src/: example_trainer.cc
tensorflow/: CMakeLists.txt  package.xml
tensorflow/cmake/: tensorflow-config.cmake.in
tensorflow/examples/: CMakeLists.txt  package.xml
tensorflow/examples/src/: example_session.cc  main.cpp
