<?xml version="1.0"?>
<package format="2">
  <!--Package Header-->
  <name>eigen3</name>
  <version>0.0.0</version>
  <description>The Eigen3 CMake package.</description>
  <license>Mozilla Public License Version 2.0</license>
  <url type="website">http://eigen.tuxfamily.org/</url>
  <maintainer email="tsounisv@ethz.ch">Vassilios Tsounis</maintainer>
  <!--Package Dependencies-->
  <buildtool_depend>cmake</buildtool_depend>
  <exec_depend>catkin</exec_depend>
  <!--Package Export-->
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
