<?xml version="1.0"?>
<package format="2">
  <!--Package Header-->
  <name>tensorflow_examples</name>
  <version>0.2.0</version>
  <description>Examples for using the TensorFlow CMake package.</description>
  <license>Apache 2.0</license>
  <url type="website">https://github.com/leggedrobotics/tensorflow-cpp</url>
  <maintainer email="tsounisv@ethz.ch">Vassilios Tsounis</maintainer>
  <!--Package Dependencies-->
  <buildtool_depend>cmake</buildtool_depend>
  <exec_depend>catkin</exec_depend>
  <build_depend>tensorflow</build_depend>
  <!--Package Export-->
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
