<?xml version="1.0"?>
<package format="2">
  <!--Package Header-->
  <name>tensorflow</name>
  <version>0.1.0</version>
  <description>The TensorFlow Catkin-ized CMake package.</description>
  <license>Proprietary</license>
  <url type="website">https://github.com/leggedrobotics/tensorflow-cpp</url>
  <maintainer email="tsounisv@ethz.ch">Vassilios Tsounis</maintainer>
  <!--Package Dependencies-->
  <buildtool_depend>cmake</buildtool_depend>
  <exec_depend>catkin</exec_depend>
  <build_depend>eigen3</build_depend>
  <!--Package Export-->
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
