<?xml version="1.0"?>
<package format="2">
  <!--Package Header-->
  <name>tensorflow</name>
  <version>0.2.0</version>
  <description>The TensorFlow CMake package for C/C++ development.</description>
  <license>Apache 2.0</license>
  <url type="website">https://github.com/leggedrobotics/tensorflow-cpp</url>
  <maintainer email="tsounisv@ethz.ch">Vassilios Tsounis</maintainer>
  <!--Package Dependencies-->
  <buildtool_depend>cmake</buildtool_depend>
  <exec_depend>catkin</exec_depend>
  <build_depend>eigen3</build_depend>
  <!--Package Export-->
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
